--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "path": "^0.11.14",
     "react-hot-loader": "^1.2.9",
     "react-router": "^0.13.3",
-    "shortid": "^2.2.2",
+    "shortid": "~2.2.2",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
     "webpack-merge": "^0.1.3"
