--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.0.5",
     "html-webpack-plugin": "^1.6.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "path": "^0.11.14",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.1.0",
+    "react-hot-loader": "^1.2.9",
+    "react-router": "^0.13.3",
     "shortid": "~2.2.2",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
